cloud/w10/project-02-secure-operate-gitops-lab/gatekeeper/templates/disallow-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostnetwork

        violation[{"msg": msg}] {
          podspec := input_podspecs[_]
          podspec.hostNetwork == true
          msg := "hostNetwork must not be true"
        }

        input_podspecs[p] {
          p := input.review.object.spec
        }

        input_podspecs[p] {
          p := input.review.object.spec.template.spec
        }

        input_podspecs[p] {
          p := input.review.object.spec.jobTemplate.spec.template.spec
        }
